fixing footer overflow issue on very narrow devices

--- a/src/app.css
+++ b/src/app.css
@@ -128,7 +128,6 @@ a:focus-visible {
 .horizontal-flex {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
 }
 
 .content-div {
